# HelixFlow

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  codecov.yml  justfile
.devcontainer/: Dockerfile  devcontainer.json  logrotate.conf
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  dependabot.yml
backends/helixflow-surreal/: Cargo.toml
backends/helixflow-surreal/src/: lib.rs
backends/helixflow-surreal/tests/: SurrealDb_TaskCRUD.rs
backends/surreal/: Cargo.toml
backends/surreal/src/: lib.rs
helixflow/: Cargo.toml  index.html
helixflow-app/: Cargo.toml  index.html
helixflow-app/src/: lib.rs  main.rs
helixflow-core/: Cargo.toml
helixflow-core/src/: lib.rs  state.rs  task.rs
helixflow/src/: lib.rs  main.rs
helixflow/tests/: slint_integration_test.rs  slint_surreal.rs
src/: lib.rs  main.rs  surreal.rs  task.rs
src/backends/: surreal.rs
src/ui/: slint.rs
tests/: slint.rs  slint_integration_test.rs  slint_surreal.rs  ui_integration.rs
ui/helixflow-slint/: Cargo.toml  build.rs
ui/helixflow-slint/src/: helixflow.slint  lib.rs  task.rs  task.slint  tasks.slint
ui/helixflow-slint/tests/: backlog.rs  slint_TaskCRUD.rs
