[workspace]
members = ["backends/helixflow-surreal", "helixflow", "helixflow-core", "ui/helixflow-slint"]
resolver = "3"

[workspace.dependencies]
# internal stuff
helixflow-core = { path = "helixflow-core" }
helixflow-slint = { path = "ui/helixflow-slint" }
helixflow-surreal = { path = "backends/helixflow-surreal" }

# main dependencies - only specify features if required to define default actions
anyhow = "1.0.98"
log = "0.4.27"
serde = { version = "1.0.219" }
slint = { version = "1.14.1", features = ["backend-winit-wayland"] }
surrealdb = { version = "2.3.3", features = ["kv-mem"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2" }
uuid = { version = "1.16.0", features = ["v7", "js"] }

# dev-only dependencies
assert_unordered = "0.3.5"
i-slint-backend-testing = { version = "1.14.1" }
rstest = "0.25.0"
tempfile = "3.20.0"

# build dependencies
slint-build = { version = "1.14.1" }
