[package]
name = "helixflow"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
helixflow-surreal.workspace = true
helixflow-slint.workspace = true
log.workspace = true
slint.workspace = true

[dev-dependencies]
futures = "0.3.31"
helixflow-core.workspace = true
i-slint-backend-testing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
getrandom.workspace = true
wasm-bindgen.workspace = true
