[package]
name = "helixflow"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
helixflow-core.workspace = true
helixflow-surreal.workspace = true
helixflow-slint.workspace = true
log.workspace = true
slint.workspace = true

[dev-dependencies]
futures = "0.3.31"
i-slint-backend-testing.workspace = true
uuid.workspace = true
