[package]
name = "helixflow"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
helixflow-core.workspace = true
helixflow-surreal.workspace = true
helixflow-slint.workspace = true
log.workspace = true
slint.workspace = true

[dev-dependencies]
i-slint-backend-testing.workspace = true
uuid.workspace = true
