[package]
name = "helixflow-surreal"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow.workspace = true
helixflow-core.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
surrealdb.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }

[dev-dependencies]
assert_unordered.workspace = true
