[package]
name = "helixflow-slint"
version = "0.0.1"
edition = "2024"

[dependencies]
helixflow-core.workspace = true
slint.workspace = true

[dev-dependencies]
i-slint-backend-testing.workspace = true
rstest.workspace = true
uuid.workspace = true

[build-dependencies]
glob.workspace = true
slint-build.workspace = true
