[package]
name = "helixflow-slint"
version = "0.0.1"
edition = "2024"

[dependencies]
helixflow-core.workspace = true
slint.workspace = true

# Feature: test_helpers
assert_unordered.workspace = true
i-slint-backend-testing.workspace = true

[dev-dependencies]
rstest.workspace = true
uuid.workspace = true

[build-dependencies]
glob.workspace = true
slint-build.workspace = true
